# bit-parser

./: README.md  bitmapParser.py  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: pythonpublish.yml
BitParser/: BitParser.py  __init__.py
pypi/: setup.py
test/: BitParser_test.py
