[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-parser"
version = "1.3.2"
description = "Parse compact bitfields (bitmaps, flag sets) represented as hex strings."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Vitalij Gotovskij", email = "vitalij@cdeveloper.eu" }
]
keywords = ["bit", "bitfield", "bitmap", "protocol", "parser"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "bitops"
]

[project.urls]
Homepage = "https://github.com/vitalij555/bit-parser"
Issues = "https://github.com/vitalij555/bit-parser/issues"
Repository = "https://github.com/vitalij555/bit-parser"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "pypi*", "htmlcov*"]
namespaces = false
